Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63050

When using cmake for iOS Simulator and QtDeclarative + QtScript in the same example in a static build then there is duplicate symbols

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.11.0
    • 5.9.1
    • None
    • iOS/tvOS/watchOS

      When using cmake for iOS Simulator and QtDeclarative + QtScript in the same example in a static build then there is duplicate symbols:

      1. ~ is my HOME folder

      duplicate symbol _WTFReportAssertionFailureWithMessage in:

      ~/Qt/5.9.1/ios/lib/libQt5Script_debug.a(Assertions.o)

      ~/Qt/5.9.1/ios/lib/libQt5Qml_debug.a(WTFStubs.o)

       

      Same bug QTBUG-35041 was fixed.

        For Gerrit Dashboard: QTBUG-63050
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            brovushkin Vladyslav Brovko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes