Fix symbol clash with QtScript when linking statically

Task-number: QTBUG-63050
Change-Id: I18c8cfae3cc4d8a6d2c82515541693b7b5194f76
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>